--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6"
   },
