--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "bootstrap-vue": "^2.0.0-rc.20",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vue-sweetalert2": "^2.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
